##Text encoding: utf-8

2011-08-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/line.cc: add new SetColor(GdkRGBA) method.
	* libs/gcr/line.h: ditto.
	* libs/gcr/linesdlg.cc: manage edges, diagonals and medians.
	* libs/gcr/linesdlg.h: ditto.

2011-08-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/grid.cc: display a check box in boolean cells.

2011-08-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/atomsdlg.cc: removed old obsolete code.
	* libs/gcr/line.cc: add new GetColor(GdkRGBA&) method.
	* libs/gcr/line.h: ditto.
	* libs/gcr/linesdlg.cc: populate the dialog with existing lines.
	* libs/gcr/linesdlg.h: ditto.

2011-08-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/atomsdlg.cc: take target button selection into account when
	radius scale changes.
	* libs/gcr/linesdlg.cc: new display, doesn't work yet.
	* libs/gcr/linesdlg.h: ditto.
	* ui/crystal/lines.ui: ditto.

2011-08-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/atomsdlg.cc: check atom list and remove duplicates.
	* libs/gcr/atomsdlg.h: ditto.
	* libs/gcr/document.cc: ditto.
	* libs/gcr/document.h: ditto.
	* libs/gcr/linesdlg.cc: start work on the lines dialog.
	* libs/gcr/linesdlg.h: ditto.

2011-08-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/atomsdlg.cc: manage radius.

2011-08-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/atomsdlg.cc: take radius scaling into account.
	* libs/gcr/atomsdlg.h: ditto.

2011-08-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: fixed goffice and gnumeric API versions.
	* libs/gcr/atomsdlg.cc: make color changes really work.
	* libs/gcr/grid.cc: improve navigation, and implement delete ans backspace.

2011-08-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/atom.cc: add new GetColor(GdkRBGA&) method.
	* libs/gcr/atom.h: ditto.
	* libs/gcr/atomsdlg.cc: work on atom color and radius. 
	* libs/gcr/atomsdlg.h: ditto.