@@ -59,14 +59,45 @@ public:
 	static void EdgesColorSet (GtkColorButton *btn, LinesDlg *pBox);
 	static void DiagsColorSet (GtkColorButton *btn, LinesDlg *pBox);
 	static void MediansColorSet (GtkColorButton *btn, LinesDlg *pBox);
+	static bool RadiusEdited (LinesDlg *pBox);
+	static void ColorSet (GtkColorButton *btn, LinesDlg *pBox);
 };
 
 void LinesDlgPrivate::AddRow (LinesDlg *pBox)
 {
+	Line *new_line;
+	if (pBox->m_LineSelected >= 0)
+		new_line = new Line (*pBox->m_Lines[pBox->m_LineSelected]);
+	else {
+		GdkRGBA rgba;
+		gtk_color_button_get_rgba (pBox->LineColor, &rgba);
+		double r;
+		pBox->GetNumber (pBox->LineR, &r);
+		new_line = new Line (normal, 0., 0., 0., 0., 0., 0., r, rgba.red, rgba.green, rgba.blue, rgba.alpha);
+	}
+	unsigned new_row = gcr_grid_append_row (pBox->m_Grid,
+	                                        new_line->X1 (), new_line->Y1 (), new_line->Z1 (),
+	                                        new_line->X2 (), new_line->Y2 (), new_line->Z2 (),
+	                                        new_line->Type () == unique),
+			 max_row = pBox->m_Lines.capacity ();
+	if (new_row >= max_row)
+		pBox->m_Lines.resize (max_row + 10);
+	pBox->m_Lines[new_row] = new_line;
+	pBox->m_pDoc->GetLineList ()->push_back (new_line);
+	pBox->m_pDoc->Update ();
+	pBox->m_pDoc->SetDirty (true);
+	gtk_widget_set_sensitive (pBox->DeleteAllBtn, true);
 }
 
 void LinesDlgPrivate::DeleteRow (LinesDlg *pBox)
 {
+	pBox->m_pDoc->GetLineList ()->remove (pBox->m_Lines[pBox->m_LineSelected]);
+	delete pBox->m_Lines[pBox->m_LineSelected];
+	pBox->m_Lines.erase (pBox->m_Lines.begin () + pBox->m_LineSelected);
+	gcr_grid_delete_row (GCR_GRID (pBox->m_Grid), pBox->m_LineSelected);
+	pBox->m_pDoc->Update ();
+	pBox->m_pDoc->SetDirty (true);
+	gtk_widget_set_sensitive (pBox->DeleteAllBtn, !pBox->m_pDoc->GetLineList ()->empty ());
 }
 
 void LinesDlgPrivate::DeleteAll (LinesDlg *pBox)
@@ -83,10 +114,48 @@ void LinesDlgPrivate::DeleteAll (LinesDlg *pBox)
 
 void LinesDlgPrivate::ValueChanged (LinesDlg *pBox, unsigned row, unsigned column)
 {
+	double coord = column != COLUMN_SINGLE? gcr_grid_get_double (pBox->m_Grid, row, column): 0.;
+	Line *line = pBox->m_Lines[pBox->m_LineSelected];
+	switch (column) {
+	case COLUMN_X1:
+		line->X1 () = coord;
+		break;
+	case COLUMN_Y1:
+		line->Y1 () = coord;
+		break;
+	case COLUMN_Z1:
+		line->Z1 () = coord;
+		break;
+	case COLUMN_X2:
+		line->X2 () = coord;
+		break;
+	case COLUMN_Y2:
+		line->Y2 () = coord;
+		break;
+	case COLUMN_Z2:
+		line->Z2 () = coord;
+		break;
+	case COLUMN_SINGLE:
+		line->Type () = gcr_grid_get_boolean (pBox->m_Grid, row, column)? unique: normal;
+	}
+	pBox->m_pDoc->Update ();
+	pBox->m_pDoc->SetDirty (true);
 }
 
 void LinesDlgPrivate::RowSelected (LinesDlg *pBox, int row)
 {
+	pBox->m_LineSelected = row;
+	gtk_widget_set_sensitive (pBox->DeleteBtn, row >= 0);
+	if (row >= 0) {
+		g_signal_handler_block (pBox->LineColor, pBox->m_ColorChangedID);
+		GdkRGBA rgba;
+		pBox->m_Lines[row]->GetColor (rgba);
+		gtk_color_button_set_rgba (pBox->LineColor, &rgba);
+		g_signal_handler_unblock (pBox->LineColor, pBox->m_ColorChangedID);
+		char *buf = g_strdup_printf ("%g", pBox->m_Lines[row]->GetRadius ());
+		gtk_entry_set_text (pBox->LineR, buf);
+		g_free (buf);
+	}
 }
 
 void LinesDlgPrivate::EdgesToggled (GtkToggleButton *btn, LinesDlg *pBox)
@@ -218,68 +287,39 @@ void LinesDlgPrivate::MediansColorSet (GtkColorButton *btn, LinesDlg *pBox)
 	pBox->m_pDoc->SetDirty (true);
 }
 
-#if 0
-struct LineStruct {
-	double r, x1, y1, z1, x2, y2, z2;
-	double Blue, Red, Green, Alpha;
-	bool duplicated;
-};
-
-static void on_add (G_GNUC_UNUSED GtkWidget *widget, LinesDlg *pBox)
+bool LinesDlgPrivate::RadiusEdited (LinesDlg *pBox)
 {
-	pBox->LineAdd ();
+	g_signal_handler_block (pBox->LineR, pBox->m_LineFocusOutSignalID);
+	double r;
+	if (pBox->m_LineSelected >= 0 && pBox->GetNumber (pBox->LineR, &r, gcugtk::Min, 0)) {
+			pBox->m_Lines[pBox->m_LineSelected]->SetRadius (r);
+			pBox->m_pDoc->Update ();
+			pBox->m_pDoc->SetDirty (true);
+	}
+	g_signal_handler_unblock (pBox->LineR, pBox->m_LineFocusOutSignalID);
+	return false;
 }
 
-static void on_delete (G_GNUC_UNUSED GtkWidget *widget, LinesDlg *pBox)
+void LinesDlgPrivate::ColorSet (GtkColorButton *btn, LinesDlg *pBox)
 {
-	pBox->LineDelete ();
+	if (pBox->m_LineSelected >= 0) {
+		GdkRGBA rgba;
+		gtk_color_button_get_rgba (btn, &rgba);
+		pBox->m_Lines[pBox->m_LineSelected]->SetColor (rgba);
+		pBox->m_pDoc->Update ();
+		pBox->m_pDoc->SetDirty (true);
+	}
 }
-
-static void on_delete_all (G_GNUC_UNUSED GtkWidget *widget, LinesDlg *pBox)
-{
-	pBox->LineDeleteAll ();
-}
-
-static void on_select (GtkTreeSelection *Selection, LinesDlg *pBox)
-{
-	pBox->LineSelect (Selection);
-}
-
-static void on_edited (GtkCellRendererText *cell, const gchar *path_string, const gchar *new_text, LinesDlg *pBox)
-{
-	pBox->OnEdited (cell, path_string, new_text);
-}
-
-static void on_toggled (GtkCellRendererToggle *cell, const gchar *path_string, LinesDlg *pBox)
-{
-	pBox->OnToggled (cell, path_string);
-}
-
-static void on_edges_toggled (G_GNUC_UNUSED GtkToggleButton* btn, LinesDlg *pBox)
-{
-	pBox->OnToggledSpecial (gcr::edges);
-}
-
-static void on_diags_toggled (G_GNUC_UNUSED GtkToggleButton* btn, LinesDlg *pBox)
-{
-	pBox->OnToggledSpecial (gcr::diagonals);
-}
-
-static void on_medians_toggled (G_GNUC_UNUSED GtkToggleButton* btn, LinesDlg *pBox)
-{
-	pBox->OnToggledSpecial (gcr::medians);
-}
-#endif
 
 LinesDlg::LinesDlg (Application *App, Document* pDoc): gcugtk::Dialog (App, UIDIR"/lines.ui", "lines", GETTEXT_PACKAGE, pDoc)
 {
 	m_pDoc = pDoc;
 	m_Closing = false;
 	GtkWidget* button = GetWidget ("add");
-	g_signal_connect (G_OBJECT (button), "clicked", G_CALLBACK (LinesDlgPrivate::AddRow), this);
+	g_signal_connect_swapped (G_OBJECT (button), "clicked", G_CALLBACK (LinesDlgPrivate::AddRow), this);
 	DeleteBtn = GetWidget ("delete");
 	gtk_widget_set_sensitive (DeleteBtn,0);
-	g_signal_connect (G_OBJECT (DeleteBtn), "clicked", G_CALLBACK (LinesDlgPrivate::DeleteRow), this);
+	g_signal_connect_swapped (G_OBJECT (DeleteBtn), "clicked", G_CALLBACK (LinesDlgPrivate::DeleteRow), this);
 	DeleteAllBtn = GetWidget ("delete-all");
 	g_signal_connect_swapped (G_OBJECT (DeleteAllBtn), "clicked", G_CALLBACK (LinesDlgPrivate::DeleteAll), this);
 	m_Grid = GCR_GRID (gcr_grid_new (_("x1"), G_TYPE_DOUBLE, _("y1"), G_TYPE_DOUBLE, _("z1"), G_TYPE_DOUBLE,
@@ -307,6 +347,8 @@ LinesDlg::LinesDlg (Application *App, Document* pDoc): gcugtk::Dialog (App, UIDI
 	DiagsR = GTK_ENTRY (GetWidget ("diag-radius"));
 	gtk_entry_set_text (DiagsR, "5");
 	gtk_widget_set_sensitive (GTK_WIDGET (DiagsR), false);
+	LineColor = GTK_COLOR_BUTTON (GetWidget ("color"));
+	LineR = GTK_ENTRY (GetWidget ("radius"));
 	m_LineSelected = -1;
 	Edges = Diagonals = Medians = NULL;
 	gcr::LineList* Lines = m_pDoc->GetLineList ();
@@ -359,7 +401,7 @@ LinesDlg::LinesDlg (Application *App, Document* pDoc): gcugtk::Dialog (App, UIDI
 			break;
 		}
 	}
-	if (!m_Lines.size ())
+	if (!Lines->size ())
 		gtk_widget_set_sensitive (DeleteAllBtn, false);
 	g_signal_connect (G_OBJECT (EdgesBtn), "toggled", G_CALLBACK (LinesDlgPrivate::EdgesToggled), this);
 	g_signal_connect (G_OBJECT (MediansBtn), "toggled", G_CALLBACK (LinesDlgPrivate::MediansToggled), this);
@@ -373,240 +415,15 @@ LinesDlg::LinesDlg (Application *App, Document* pDoc): gcugtk::Dialog (App, UIDI
 	g_signal_connect (G_OBJECT (EdgesColor), "color-set", G_CALLBACK (LinesDlgPrivate::EdgesColorSet), this);
 	g_signal_connect (G_OBJECT (DiagsColor), "color-set", G_CALLBACK (LinesDlgPrivate::DiagsColorSet), this);
 	g_signal_connect (G_OBJECT (MediansColor), "color-set", G_CALLBACK (LinesDlgPrivate::MediansColorSet), this);
+	m_LineFocusOutSignalID = g_signal_connect_swapped (G_OBJECT (LineR), "focus-out-event", G_CALLBACK (LinesDlgPrivate::RadiusEdited), this);
+	g_signal_connect_swapped (G_OBJECT (LineR), "activate", G_CALLBACK (LinesDlgPrivate::RadiusEdited), this);
+	m_ColorChangedID = g_signal_connect (G_OBJECT (LineColor), "color-set", G_CALLBACK (LinesDlgPrivate::ColorSet), this);
 
 	gtk_widget_show_all (GTK_WIDGET (dialog));
 }
 
 LinesDlg::~LinesDlg ()
 {
-/*	if (m_Lines)
-		g_array_free (m_Lines, false);*/
-}
-
-bool LinesDlg::Apply ()
-{
-/*	GdkColor color;
-	if (m_LineSelected >= 0) {
-		gtk_color_button_get_color (LineColor, &color);
-		g_array_index(m_Lines, struct LineStruct, m_LineSelected).Red = color.red / 65535.;
-		g_array_index(m_Lines, struct LineStruct, m_LineSelected).Green = color.green / 65535.;
-		g_array_index(m_Lines, struct LineStruct, m_LineSelected).Blue = color.blue / 65535.;
-		g_array_index(m_Lines, struct LineStruct, m_LineSelected).Alpha = gtk_color_button_get_alpha (LineColor) / 65535.;
-		if ((!GetNumber(LineR, &g_array_index (m_Lines, struct LineStruct, m_LineSelected).r, gcugtk::Min, 0)) || (g_array_index (m_Lines, struct LineStruct, m_LineSelected).r == 0.0)) {
-		}
-	}
-	gcr::LineList* Lines = m_pDoc->GetLineList ();
-	//First, delete old lines
-	while (!Lines->empty ())
-	{
-		delete Lines->front ();
-		Lines->pop_front ();
-	}
-	//Add edged, diagonals and medians
-	gcr::Line* pLine;
-	double r, Red, Green, Blue, Alpha;
-	if (gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON (Edges))) {
-		GetNumber (EdgesR, &r, gcugtk::Min, 0);
-		if (r > 0.0) {
-			gtk_color_button_get_color (EdgesColor, &color);
-			Red = color.red / 65535.;
-			Green = color.green / 65535.;
-			Blue = color.blue / 65535.;
-			Alpha = gtk_color_button_get_alpha (EdgesColor) / 65535.;
-			pLine = new gcr::Line (gcr::edges, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, r, Red, Green, Blue, Alpha);
-			Lines->push_back (pLine);
-		}
-	}
-	if (gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON (Diags))) {
-		GetNumber (DiagsR, &r, gcugtk::Min, 0);
-		if (r > 0.0) {
-			gtk_color_button_get_color (DiagsColor, &color);
-			Red = color.red / 65535.;
-			Green = color.green / 65535.;
-			Blue = color.blue / 65535.;
-			Alpha = gtk_color_button_get_alpha (DiagsColor) / 65535.;
-			pLine = new gcr::Line (gcr::diagonals, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, r, Red, Green, Blue, Alpha);
-			Lines->push_back (pLine);
-		}
-	}
-	if (gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON (Medians))) {
-		GetNumber (MediansR, &r, gcugtk::Min, 0);
-		if (r > 0.0) {
-			gtk_color_button_get_color (MediansColor, &color);
-			Red = color.red / 65535.;
-			Green = color.green / 65535.;
-			Blue = color.blue / 65535.;
-			Alpha = gtk_color_button_get_alpha (MediansColor) / 65535.;
-			pLine = new gcr::Line (gcr::medians, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, r, Red, Green, Blue, Alpha);
-			Lines->push_back (pLine);
-		}
-	}
-	//Add new lines from array
-
-	struct LineStruct* s;
-	for (unsigned i = 0; i  < m_Lines->len; i++) {
-		s = &g_array_index (m_Lines, struct LineStruct, i);
-		Lines->push_back (new gcr::Line((s->duplicated)? gcr::normal: gcr::unique, s->x1, s->y1, s->z1, s->x2, s->y2, s->z2, s->r, (float)s->Red, (float)s->Green, (float)s->Blue, (float)s->Alpha));
-	}
-	m_pDoc->Update ();
-	m_pDoc->SetDirty (true);*/
-	return true;
-}
-
-void LinesDlg::LineAdd ()
-{
-	/*GtkTreeIter iter;
-
-	struct LineStruct s;
-	s.x1 = s.y1 =s.z1 = s.x2 = s.y2 =s.z2 = 0.0;
-	GdkColor color;
-	gtk_color_button_get_color (LineColor, &color);
-	s.Red = color.red / 65535.;
-	s.Green = color.green / 65535.;
-	s.Blue = color.blue / 65535.;
-	s.Alpha = gtk_color_button_get_alpha (LineColor) / 65535.;
-	GetNumber (LineR, &s.r);
-	g_array_append_vals (m_Lines, &s, 1);
-	gtk_list_store_append (LineList, &iter);
-	gtk_list_store_set (LineList, &iter,
-		      0, 0.0,
-		      1, 0.0,
-		      2, 0.0,
-		      3, 0.0,
-		      4, 0.0,
-		      5, 0.0,
-		      6, false,
-		      -1);
-	gtk_widget_set_sensitive (DeleteAllBtn, true);
-	gtk_tree_selection_select_iter (Selection, &iter);*/
-}
-
-void LinesDlg::LineDelete ()
-{
-/*	GtkTreeModel* model = GTK_TREE_MODEL (LineList);
-
-	if (gtk_tree_selection_get_selected (Selection, &model, &m_Iter)) {
-		gint i;
-		GtkTreePath *path;
-
-		path = gtk_tree_model_get_path (model, &m_Iter);
-		i = gtk_tree_path_get_indices (path)[0];
-		gtk_list_store_remove (GTK_LIST_STORE (model), &m_Iter);
-
-		g_array_remove_index (m_Lines, i);
-
-		gtk_tree_path_free (path);
-    }
-	if (!m_Lines->len)
-		gtk_widget_set_sensitive (DeleteAllBtn, false);*/
-}
-
-void LinesDlg::LineDeleteAll ()
-{
-/*	g_array_free (m_Lines, false);
-	m_Lines = g_array_sized_new (FALSE, FALSE, sizeof (struct LineStruct), 1);
-	gtk_list_store_clear (LineList);
-	gtk_widget_set_sensitive (DeleteAllBtn, false);*/
-}
-
-void LinesDlg::LineSelect (GtkTreeSelection *Selection)
-{
-/*	GdkColor color;
-	if (m_LineSelected >= 0) {
-		gtk_color_button_get_color (LineColor, &color);
-		g_array_index(m_Lines, struct LineStruct, m_LineSelected).Red = color.red / 65535.;
-		g_array_index(m_Lines, struct LineStruct, m_LineSelected).Green = color.green / 65535.;
-		g_array_index(m_Lines, struct LineStruct, m_LineSelected).Blue = color.blue / 65535.;
-		g_array_index(m_Lines, struct LineStruct, m_LineSelected).Alpha = gtk_color_button_get_alpha (LineColor) / 65535.;
-		if ((!GetNumber (LineR, &g_array_index(m_Lines, struct LineStruct, m_LineSelected).r, gcugtk::Min, 0)) || (g_array_index (m_Lines, struct LineStruct, m_LineSelected).r == 0.0)) {
-		}
-	}
-	GtkTreeModel* model = GTK_TREE_MODEL (LineList);
-	GtkTreePath *path;
-	if (gtk_tree_selection_get_selected (Selection, &model, &m_Iter)) {
-		gtk_widget_set_sensitive (DeleteBtn, true);
-		path = gtk_tree_model_get_path (model, &m_Iter);
-		m_LineSelected = gtk_tree_path_get_indices (path)[0];
-		color.red = (guint16) (g_array_index(m_Lines, struct LineStruct, m_LineSelected).Red * 65535.);
-		color.green = (guint16) (g_array_index(m_Lines, struct LineStruct, m_LineSelected).Green * 65535.);
-		color.blue = (guint16) (g_array_index(m_Lines, struct LineStruct, m_LineSelected).Blue * 65535.);
-		gtk_color_button_set_color (LineColor, &color);
-		gtk_color_button_set_alpha (LineColor, (guint16) (g_array_index(m_Lines, struct LineStruct, m_LineSelected).Alpha * 65535.));
-		char *tmp;
-		tmp = g_strdup_printf ("%g", g_array_index (m_Lines, struct LineStruct, m_LineSelected).r);
-		gtk_entry_set_text (LineR, tmp);
-		g_free (tmp);
-		gtk_tree_path_free (path);
-	} else {
-		gtk_widget_set_sensitive (DeleteBtn, false);
-		if (!m_Lines->len) gtk_widget_set_sensitive (DeleteAllBtn, false);
-		m_LineSelected = -1;
-	}*/
-}
-
-void LinesDlg::OnEdited (GtkCellRendererText *cell, const gchar *path_string, const gchar *new_text)
-{
-/*	GtkTreePath *path = gtk_tree_path_new_from_string (path_string);
-	GtkTreeIter iter;
-
-	gtk_tree_model_get_iter (GTK_TREE_MODEL (LineList), &iter, path);
-
-	long j  = (long) g_object_get_data (G_OBJECT (cell), "column");
-	double x = atof (new_text);
-	gtk_list_store_set (LineList, &iter, j, x, -1);
-	switch (j) {
-	case COLUMN_X1:
-		g_array_index (m_Lines, struct LineStruct, m_LineSelected).x1 = x;
-		break;
-	case COLUMN_Y1:
-		g_array_index (m_Lines, struct LineStruct, m_LineSelected).y1 = x;
-		break;
-	case COLUMN_Z1:
-		g_array_index (m_Lines, struct LineStruct, m_LineSelected).z1 = x;
-		break;
-	case COLUMN_X2:
-		g_array_index (m_Lines, struct LineStruct, m_LineSelected).x2 = x;
-		break;
-	case COLUMN_Y2:
-		g_array_index (m_Lines, struct LineStruct, m_LineSelected).y2 = x;
-		break;
-	case COLUMN_Z2:
-		g_array_index (m_Lines, struct LineStruct, m_LineSelected).z2 = x;
-		break;
-	}
-	gtk_tree_path_free (path);*/
-}
-
-void LinesDlg::OnToggled (G_GNUC_UNUSED GtkCellRendererToggle *cell, const gchar *path_string)
-{
-/*	GtkTreePath *path = gtk_tree_path_new_from_string (path_string);
-	GtkTreeIter iter;
-
-	gtk_tree_model_get_iter (GTK_TREE_MODEL(LineList), &iter, path);
-	gboolean single;
-	gtk_tree_model_get (GTK_TREE_MODEL (LineList), &iter, COLUMN_SINGLE, &single, -1);
-	single ^= 1;
-	gtk_list_store_set (LineList, &iter, COLUMN_SINGLE, single, -1);
-	g_array_index (m_Lines, struct LineStruct, gtk_tree_path_get_indices (path)[0]).duplicated = !single;
-	gtk_tree_path_free (path);*/
-}
-
-void LinesDlg::OnToggledSpecial (int Type)
-{
-/*	switch (Type) {
-	case gcr::edges:
-		gtk_widget_set_sensitive (GTK_WIDGET (EdgesColor), gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON (Edges)));
-		gtk_widget_set_sensitive (GTK_WIDGET (EdgesR), gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON (Edges)));
-		break;
-	case gcr::diagonals:
-		gtk_widget_set_sensitive (GTK_WIDGET (DiagsColor), gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON (Diags)));
-		gtk_widget_set_sensitive (GTK_WIDGET (DiagsR), gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON (Diags)));
-		break;
-	case gcr::medians:
-		gtk_widget_set_sensitive (GTK_WIDGET (MediansColor), gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON (Medians)));
-		gtk_widget_set_sensitive (GTK_WIDGET (MediansR), gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON (Medians)));
-		break;
-	}*/
 }
 
 void LinesDlg::Closed ()
